{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "9ba73d04-2d0b-43d4-8fc3-cf93428f1b8f",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "839d992e-04f4-4753-8d60-c6aa0e01e42f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d48e42d3-8831-4086-9385-9083db354079",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4f6e02bf-d9ef-406e-99a7-b7ba4de1957c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c14d792e-5c5b-4f71-ac4a-926d0542bd44",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "53ac5978-c46c-4c69-99c4-ca431ac7c7fc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8458ad5f-9447-459b-bdbb-950a5403d6e2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}